<resources>
    <string name="app_name">Emerge community</string>

    <string name="facebook_app_id">2556089671372960</string>
    <string name="fb_login_protocol_scheme">fb2556089671372960</string>
    <string name="fail_message">Упс. Что-то пошло не так</string>
    <string name="facebook_login">Логин через Facebook</string>
    <string name="ticket_scanner">Скинировать билет</string>
    <string name="login_to_conference">Залогиниться на наше супер мероприятие</string>
    <string name="ticket_not_recognize">Билет не распознан</string>
    <string name="target_camera_to_ticket">Наведите камеру на билет пожалуйста</string>
    <string name="ticket_scanner_started">Сканер билета запущен</string>
    <string name="login_title">Инвестиции \nпо любви</string>
    <string name="login_description">Общайтесь, встречайтесь, договаривайтесь. Завершение конференции прекрасное время чтобы себя показать и на других посмотреть.</string>

    <string name="first_startup_call_link">https://us04web.zoom.us/j/78435173273?pwd=Y1ZVTXpQNEROR3BmRWlyMDI2RkRlUT09</string>
    <string name="second_startup_call_link">https://us04web.zoom.us/j/78435173273?pwd=Y1ZVTXpQNEROR3BmRWlyMDI2RkRlUT09</string>
    <string name="third_startup_call_link">https://us04web.zoom.us/j/78435173273?pwd=Y1ZVTXpQNEROR3BmRWlyMDI2RkRlUT09</string>

    <string name="startup_money_info_budget_title">Бюджет</string>
    <string name="startup_money_info_budget_value">200 \u20BD</string>
    <string name="startup_money_info_budget_from">Личные \nсредства</string>
    <string name="startup_money_info_need_title">Нужно</string>
    <string name="startup_money_info_need_value">350т \u20BD</string>
    <string name="startup_money_info_need_how">Долевое участие \nдо 30%</string>

    <string name="startup1_quick_info_money_value">278</string>
    <string name="startup2_quick_info_money_value">350 000 \u20BD</string>
    <string name="startup3_quick_info_money_value">250 000 \u20BD</string>
</resources>